# lux

./: .gitignore  .tmp_self.js  .tmp_self.svelte  Cargo.toml  README.md  ToParse.analyzed.txt  ToParse.json  ToParse.parsed.txt  ToParse.svelte  ToParse.transformed.css  ToParse.transformed.js  ToParse2.parsed.txt  ToParse2.svelte  run-toparse-html.mjs  tmp_test.txt
crates/lux-analyzer/: Cargo.toml
crates/lux-analyzer/benches/: svelte_compare.rs  svelte_compare_analyzer.rs
crates/lux-analyzer/examples/: analyze_component.rs  analyze_file.rs
crates/lux-analyzer/src/: create_scopes.rs  lib.rs  scope.rs  visitor.rs
crates/lux-analyzer/src/analyze/: analysis.rs  css.rs  errors.rs  mod.rs  state.rs  utils.rs  visitor.rs  warnings.rs
crates/lux-analyzer/src/analyze/a11y/: constants.rs  mod.rs
crates/lux-analyzer/src/analyze/visitors/: animate_directive.rs  attribute.rs  await_block.rs  bind_directive.rs  call_expression.rs  class_directive.rs  component.rs  const_tag.rs  debug_tag.rs  each_block.rs  expression_tag.rs  html_tag.rs  identifier.rs  if_block.rs  key_block.rs  let_directive.rs  mod.rs  on_directive.rs  regular_element.rs  render_tag.rs  slot_element.rs  snippet_block.rs  spread_attribute.rs  style_directive.rs  svelte_body.rs  svelte_boundary.rs  svelte_component.rs  svelte_document.rs  svelte_element.rs  svelte_fragment.rs  svelte_head.rs  svelte_self.rs  svelte_window.rs  text.rs  title_element.rs  transition_directive.rs  use_directive.rs
crates/lux-analyzer/src/css/: mod.rs  rule.rs
crates/lux-analyzer/src/css/selector/: complex.rs  global.rs  mod.rs  relative.rs
crates/lux-analyzer/src/scope/: binding.rs  mod.rs  tree.rs
crates/lux-analyzer/src/scope/create/: js.rs  mod.rs  svelte.rs
crates/lux-analyzer/src/script/: mod.rs  program.rs
crates/lux-analyzer/src/template/: binding.rs  context.rs  fragment.rs  mod.rs  reference.rs
crates/lux-analyzer/src/template/binding/: destructuring.rs  mod.rs  pattern.rs
crates/lux-analyzer/src/template/diagnostics/: assignment.rs  bind.rs  block.rs  each.rs  let_directive.rs  mod.rs  render.rs  snippet.rs
crates/lux-analyzer/src/template/node/: await_block.rs  each_block.rs  element.rs  mod.rs  snippet_block.rs
crates/lux-analyzer/src/template/reference/: collector.rs  mod.rs  mode.rs
crates/lux-analyzer/tests/: css_analysis.rs  parity_reference_diagnostics.rs  script_analysis.rs  template_analysis.rs
crates/lux-ast/: Cargo.toml
crates/lux-ast/src/: analysis.rs  attributes.rs  blocks.rs  common.rs  elements.rs  lib.rs  metadata.rs  root.rs  span.rs  tags.rs  text.rs
crates/lux-ast/src/css/: mod.rs  selector.rs  stylesheet.rs
crates/lux-ast/src/template/: attribute.rs  block.rs  directive.rs  element.rs  mod.rs  root.rs  tag.rs
crates/lux-ast/src/utils/: estree.rs
crates/lux-node/: Cargo.toml
crates/lux-node/src/: lib.rs
crates/lux-parser/: Cargo.toml
crates/lux-parser/benches/: svelte_compare_parser.rs
crates/lux-parser/examples/: benchmark.rs  parse.rs  parse_file.rs  parse_loose.rs
crates/lux-parser/src/: context.rs  error.rs  input.rs  lib.rs
crates/lux-parser/src/parser/: mod.rs  span_offset.rs
crates/lux-parser/src/parser/html_entities/: decode.rs  entities_data.rs
crates/lux-parser/src/parser/read/: context.rs  css.rs  expression.rs  mod.rs  options.rs  pattern.rs  script.rs  style.rs
crates/lux-parser/src/parser/state/: fragment.rs  mod.rs  text.rs
crates/lux-parser/src/parser/utils/: bracket.rs  helpers.rs  language.rs  mod.rs  scanner.rs  span_offset.rs
crates/lux-parser/tests/: auto_close.rs  basic.rs  block.rs  compare-edge.mjs  compare-values.mjs  compare.rs  css.rs  diff.mjs  expression.rs  generate.mjs  meta_rules.rs  options.rs  parity_modern_reference.rs  parse_integration.rs  performance.rs  script_style_depth.rs  tag.rs  test-edge.mjs
crates/lux-parser/tests/ToParse/: edge-cases.svelte
crates/lux-parser/tests/common/: mod.rs
crates/lux-parser/tests/tools/svelte_runner/: analyze_diagnostics.mjs  benchmark_phase.mjs  package.json  parse_ast.mjs  pnpm-lock.yaml
crates/lux-transformer/: Cargo.toml
crates/lux-transformer/benches/: svelte_compare_transformer.rs
crates/lux-transformer/examples/: transform_file.rs
crates/lux-transformer/src/: lib.rs
crates/lux-transformer/src/css/: mod.rs  selector.rs  stylesheet.rs
crates/lux-transformer/src/js/: component.rs  mod.rs  template.rs
crates/lux-transformer/src/js/component/: consts.rs  exports.rs  mod.rs  script.rs
crates/lux-transformer/src/js/template/: attribute.rs  css_scope.rs  marker.rs  mod.rs  render.rs  runtime.rs
crates/lux-transformer/src/runtime/: client.js  mod.rs  server.js
crates/lux-transformer/tests/: parity_reference_imports.rs  parity_reference_runes.rs  parity_reference_ssr.rs  transform.rs
crates/lux-utils/: Cargo.toml
crates/lux-utils/src/: a11y.rs  attributes.rs  bindings.rs  closing_tag.rs  elements.rs  events.rs  fuzzymatch.rs  hash.rs  html_tree.rs  lib.rs  patterns.rs  reserved.rs  runes.rs
crates/lux-utils/src/html_entities/: decode.rs  generate_entities.py  mod.rs
crates/svelte-analyzer/: Cargo.toml
crates/svelte-ast/: Cargo.toml
crates/svelte-ast/src/: attributes.rs  blocks.rs  css.rs  elements.rs  lib.rs  node.rs  root.rs  span.rs  tags.rs  text.rs
crates/svelte-ast/src/utils/: estree.rs
crates/svelte-parser/: Cargo.toml
crates/svelte-parser/examples/: parse.rs  parse_loose.rs
crates/svelte-parser/src/: context.rs  error.rs  lib.rs
crates/svelte-parser/src/parser/: attribute.rs  block.rs  bracket.rs  comment.rs  element.rs  expression.rs  fragment.rs  mod.rs  oxc_parse.rs  script.rs  span_offset.rs  swc_parse.rs  tag.rs  text.rs
crates/svelte-parser/tests/: .gitignore  _find_frag_diff.mjs  _tmp_check.mjs  check_diff.mjs  check_import2.mjs  check_loc.mjs  check_options.mjs  check_vardecl_loc.mjs  cleanup.py  compare.rs  diff_analysis.mjs  diff_json.py  package.json  parser_modern.rs  performance.rs  pnpm-lock.yaml
crates/svelte-parser/tests/fixtures/: performance.svelte
crates/svelte-transformer/: Cargo.toml
(+293 files in other folders)
