[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "MIT"
repository = "https://github.com/levish0/svelte-rs"
description = "Svelte 5+ compiler implemented in Rust. Aims for 100% compatibility with the official Svelte compiler."
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]
# Internal crates
svelte-ast = { path = "crates/svelte-ast" }
svelte-parser = { path = "crates/svelte-parser" }
svelte-analyzer = {path = "crates/svelte-analyzer"}
svelte-transformer = { path = "crates/svelte-transformer" }

# External dependencies
winnow = { version = "0.7.14", features = ["simd"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
oxc_parser = "0.110.0"
oxc_allocator = "0.110.0"
oxc_ast = { version = "0.110.0", features = ["serialize"] }
oxc_span = { version = "0.110.0", features = ["serialize"] }
oxc_diagnostics = "0.110.0"
oxc_estree = { version = "0.110.0", features = ["serialize"] }
rayon = "1.11.0"
line-span = "0.1.5"