[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
license = "MIT"
repository = "https://github.com/levish0/lux"
description = "Svelte compiler implemented in Rust. Aims for 100% compatibility with the official Svelte compiler."
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]
# Internal crates
lux-ast = { path = "crates/lux-ast" }
lux-parser = { path = "crates/lux-parser" }
lux-analyzer = {path = "crates/lux-analyzer"}
lux-transformer = { path = "crates/lux-transformer" }
lux-utils = { path="crates/lux-utils" }

# External dependencies
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
oxc_parser = "0.112.0"
oxc_allocator = "0.112.0"
oxc_ast = { version = "0.112.0", features = ["serialize"] }
oxc_span = { version = "0.112.0", features = ["serialize"] }
oxc_syntax = "0.112.0"
oxc_diagnostics = "0.112.0"
oxc_estree = { version = "0.112.0", features = ["serialize"] }
oxc_ast_visit = "0.112.0"
rayon = "1.11.0"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.3"
line-span = "0.1.5"
strsim = "0.11.1"
rustc-hash = "2.1.1"