[package]
name = "lux-analyzer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Svelte 5 semantic analyzer"

[dependencies]
lux-ast = {workspace = true}
lux-utils = {workspace = true}
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
rustc-hash = { workspace = true }
oxc_ast_visit = {workspace = true}

[dev-dependencies]
lux-parser = {workspace = true}
