[package]
name = "lux-analyzer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Semantic analyzer for the Lux Svelte compiler"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lux-ast = { workspace = true }
lux-utils = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_ast_visit = { workspace = true }
rustc-hash = { workspace = true }
