[package]
name = "lux-ast"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "svelte-ast"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
oxc_ast = { workspace = true }
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_estree = { workspace = true }
line-span = {workspace = true}