[package]
name = "lux-ast"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "AST type definitions for the Lux Svelte compiler"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lux-utils = { workspace = true }
oxc_ast = { workspace = true }
oxc_allocator = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_estree = { workspace = true }
serde = { workspace = true }
