[package]
name = "lux-node"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Node N-API bindings for Lux compiler"
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
lux-ast = { workspace = true }
lux-analyzer = { workspace = true }
lux-parser = { workspace = true }
lux-transformer = { workspace = true }
oxc_allocator = { workspace = true }
napi = {workspace = true}
napi-derive ={workspace = true}
serde_json = { workspace = true }

[build-dependencies]
napi-build = {workspace = true}
