[package]
name = "lux-transformer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for the Lux Svelte compiler"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lux-ast = { workspace = true }
lux-utils = { workspace = true }
lux-analyzer = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
rustc-hash = { workspace = true }
