[package]
name = "lux-transformer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generator for the Lux Svelte compiler"
edition.workspace = true
rust-version.workspace = true

[dependencies]
lux-ast = { workspace = true }
lux-utils = { workspace = true }
lux-analyzer = { workspace = true }
lux-parser = { workspace = true }
oxc_ast = { workspace = true }
oxc_allocator = { workspace = true }
oxc_codegen = { workspace = true }
oxc_ast_visit = { workspace = true }
oxc_span = { workspace = true }
oxc_syntax = { workspace = true }
oxc_parser = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
lux-test-support = { workspace = true }
serde_json = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "svelte_compare_transformer"
harness = false
