[package]
name = "lux-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared utilities for the Lux Svelte compiler"
edition.workspace = true
rust-version.workspace = true

[dependencies]
phf = { workspace = true }
rustc-hash = { workspace = true }
strsim = { workspace = true }
