[package]
name = "svelte-ast"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "svelte-ast"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
line-span = { workspace = true }