[package]
name = "svelte-parser"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "svelte-parser"

[dependencies]
svelte-ast = { workspace = true }
winnow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
oxc_parser = { workspace = true }
oxc_allocator = { workspace = true }
oxc_ast = { workspace = true }
oxc_span = { workspace = true }
oxc_diagnostics = { workspace = true }
line-span = { workspace = true }