[package]
name = "svelte-transformer"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "svelte-transformer"

[dependencies]
winnow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon={workspace = true}